# Luminol

./: .gdb_history  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .wakatime-project  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONALITY.md  README.md  STYLE.md  Trunk.toml  build.rs  check.sh  commands.ron  i18n.toml  index.html  log.txt  marshal  rust-toolchain.toml  rustfmt.toml
command-lib/: Cargo.toml
command-lib/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: error.rs  lib.rs  midi.rs  native.rs  wrapper.rs
crates/components/: Cargo.toml
crates/components/src/: animation_frame_view.rs  cellpicker.rs  collapsing_view.rs  database_view.rs  filesystem_view.rs  id_vec.rs  lib.rs  map_view.rs  sound_tab.rs  syntax_highlighting.rs  tilepicker.rs  ui_ext.rs
crates/components/src/command_view/: command_ui.rs  macros.rs  mod.rs  parameter_ui.rs  ui.rs
crates/config/: Cargo.toml
crates/config/src/: command_db.rs  global.rs  lib.rs  project.rs
crates/config/src/terminal/: mod.rs  theme.rs
crates/core/: Cargo.toml
crates/core/src/: data_cache.rs  lib.rs  modal.rs  project_handler.rs  project_manager.rs  tab.rs  toasts.rs  window.rs
crates/core/src/data_cache/: data_formats.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  option_vec.rs  rgss_structs.rs
crates/data/src/helpers/: id_alox.rs  id_serde.rs  id_vec.rs  id_vec_alox.rs  id_vec_serde.rs  mod.rs  nil_padded_alox.rs  nil_padded_serde.rs  optional_id_alox.rs  optional_id_serde.rs  optional_path.rs  optional_path_alox.rs  optional_path_serde.rs  parameter_type.rs
crates/data/src/rmxp/: actor.rs  animation.rs  armor.rs  class.rs  enemy.rs  item.rs  map.rs  mod.rs  skill.rs  state.rs  system.rs  tileset.rs  troop.rs  weapon.rs
crates/data/src/shared/: audio_file.rs  event.rs  mapinfo.rs  mod.rs  move_route.rs  script.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: archiver.rs  egui_bytes_loader.rs  erased.rs  lib.rs  list.rs  native.rs  overlay.rs  path_cache.rs  project.rs  trie.rs
crates/filesystem/src/archiver/: file.rs  filesystem.rs  mod.rs  util.rs
crates/filesystem/src/web/: events.rs  mod.rs  util.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: atlas_cache.rs  atlas_loader.rs  binding_helpers.rs  event.rs  frame.rs  image_cache.rs  lib.rs  map.rs  plane.rs  texture_loader.rs  tilepicker.rs  viewport.rs
crates/graphics/src/collision/: collision.wgsl  instance.rs  mod.rs  shader.rs  vertex.rs
crates/graphics/src/data/: mod.rs  quad.rs  transform.rs  vertex.rs  viewport.rs
crates/graphics/src/grid/: display.rs  grid.wgsl  instance.rs  mod.rs  shader.rs
crates/graphics/src/loaders/: atlas.rs  mod.rs  texture.rs
crates/graphics/src/primitives/: mod.rs
crates/graphics/src/sprite/: graphic.rs  mod.rs  shader.rs  sprite.wgsl  vertices.rs
crates/graphics/src/tiles/: atlas.rs  autotiles.rs  instance.rs  mod.rs  opacity.rs  shader.rs  tilemap.wgsl
crates/launcher/: Cargo.toml  build.rs  index.html
crates/launcher/assets/: manifest.json
crates/launcher/assets/js/: compat-test.js  main.js  sw.js
crates/launcher/src/: main.rs  steam.rs
crates/luminol/: Cargo.toml
crates/luminol-audio/: Cargo.toml
crates/luminol-audio/src/: lib.rs  midi.rs  wrapper.rs
crates/luminol-components/: Cargo.toml
crates/luminol-components/src/: lib.rs  map_view.rs  modal.rs  sound_tab.rs  tab.rs  tilepicker.rs  window.rs
crates/luminol-components/src/command_view/: parameter_ui.rs  ui.rs
crates/luminol-config/: Cargo.toml
crates/luminol-config/src/: global.rs  lib.rs  project.rs
crates/luminol-core/: Cargo.toml
crates/luminol-core/src/: data_cache.rs  filesystem.rs  lib.rs  modal.rs  tab.rs  window.rs
crates/luminol-core/src/config/: command_db.rs  global.rs  mod.rs
crates/luminol-core/src/filesystem/: host.rs
crates/luminol-data/: Cargo.toml
crates/luminol-data/src/: data_cache.rs  lib.rs
crates/luminol-data/src/helpers/: optional_path.rs
crates/luminol-data/src/rmxp/: item.rs  system.rs
crates/luminol-filesystem/: Cargo.toml
crates/luminol-filesystem/src/: archiver.rs  erased.rs  host.rs  lib.rs  list.rs  native.rs  path_cache.rs  project.rs  web.rs
crates/luminol-graphics/: Cargo.toml
crates/luminol-graphics/src/: atlas_cache.rs  event.rs  image_cache.rs  lib.rs  map.rs  plane.rs  quad.rs
crates/luminol-modals/: Cargo.toml
crates/luminol-modals/src/: graphic_picker.rs  lib.rs  sound_picker.rs  switch.rs  variable.rs
crates/luminol-tabs/: Cargo.toml
crates/luminol-tabs/src/: lib.rs  started.rs
crates/luminol-term/: Cargo.toml
crates/luminol-term/examples/: eframe.rs
crates/luminol-ui/: Cargo.toml
crates/luminol-ui/src/: lib.rs
crates/luminol-web/: Cargo.toml
crates/luminol-web/src/: lib.rs  web_worker_runner.rs
crates/luminol/src/: main.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/modals/: Cargo.toml
crates/modals/src/: event_graphic_picker.rs  graphic_picker.rs  lib.rs  sound_picker.rs  switch.rs  variable.rs
luminol-gui/: Cargo.toml
luminol-gui/src/: lib.rs  luminol.rs
luminol-gui/src/components/: toasts.rs  top_bar.rs
luminol-gui/src/data/: rmxp_structs.rs
luminol-gui/src/filesystem/: data_cache.rs
luminol-gui/src/tabs/: map.rs
luminol-gui/src/windows/: about.rs
luminol-term/: Cargo.toml
luminol-term/examples/: eframe.rs
luminol-term/src/: into.rs  lib.rs
marshal/: Cargo.toml
marshal/src/: error.rs  lib.rs
marshal/src/deserialize/: deserializer.rs  mod.rs  visitor.rs
marshal/src/serialize/: mod.rs
rmxp-types/: Cargo.toml
rmxp-types/src/: lib.rs  nil_padded.rs  option_vec.rs  parameter_type.rs  rgss_structs.rs  rmxp_structs.rs
rmxp-types/src/helpers/: id.rs  id_vec.rs  mod.rs  nil_padded.rs  optional_id.rs  parameter_type.rs
rmxp-types/src/rmxp/: actor.rs  animation.rs  armor.rs  class.rs  enemy.rs  item.rs  map.rs  mod.rs  skill.rs  state.rs  system.rs  tileset.rs  troop.rs  weapon.rs
rmxp-types/src/shared/: audio_file.rs  event.rs  mapinfo.rs  mod.rs  move_route.rs
(+481 files in other folders)
