[package]
name = "command-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmxp-types = { version = "*", path = "../rmxp-types" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.0"

egui = "0.21"
