[package]
name = "luminol"
version = "0.2.0"
authors = ["Lily Lyons <lily@nowaffles.com>", "Egor Poleshko <somedevfox@gmail.com>"]
edition = "2021"
rust-version = "1.62"
description = "Luminol is a FOSS recreation of RPG Maker XP in Rust with love ❤️"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Speak2Erase/Luminol"
keywords = ["gamedev", "rpg", "rpg-maker"]
categories = ["games"]

[dependencies]
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["svg", "image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
ndarray = { version = "0.15.6", features = ["serde"] }
rfd = "0.10.0"
num-traits = "0.2"
strum = { version = "0.24.1", features = ["derive"] }
egui_dock = "0.2.1"
egui-notify = "0.4.0"
ruby-marshal = { version = "0.0.1", path = "../marshal" }
cfg-if = "1.0.0"

[features]
default = ["generic-tilemap"]
generic-tilemap = []

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
rodio = { version = "0.16.0", features = ["symphonia-all"], default-features = false }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
web-sys = "0.3.59"
rodio = { version = "0.16.0", features = ["wasm-bindgen", "symphonia-all"], default-features = false }
