[package]
name = "ruby-marshal"
version = "0.0.1"
edition = "2021"
description = """
`ruby-marshal` is a Serde crate for parsing Ruby Dumped Object Format called "Marshal".
"""
homepage = "https://github.com/Speak2Erase/Luminol/marshal"
repository = "https://github.com/Speak2Erase/Luminol"
license = "GPL-3.0"
keywords = ["ruby", "marshal", "ruby-marshal", "luminol"]
categories = ["parser-implementations"]
authors = [
	"Egor Poleshko <somedevfox@gmail.com>",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
num-traits = "0.2"
