[package]
name = "luminol-audio"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# * Audio * #
rustysynth = "1.3.1" # SoundFont MIDI synthesizer

# * Logging and diagnostics * #
color-eyre.workspace = true

# * Useful procedural macros * #
strum.workspace = true
thiserror.workspace = true

# * More efficient implementations of individual components of Rust's Standard Library * #
parking_lot.workspace = true
once_cell.workspace = true

# * Tools to aid concurrent programming * #
fragile.workspace = true

# * File system interfaces * #
camino.workspace = true

# * Luminol's crates * #
luminol-config.workspace = true
luminol-filesystem.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# * Audio * #
rodio = "0.19.0" # Audio playback

[target.'cfg(target_arch = "wasm32")'.dependencies]
# * Audio * #
rodio = { version = "0.19.0", features = [
    "wasm-bindgen",
] } # Audio playback (web)

# * More efficient implementations of individual components of Rust's Standard Library * #
once_cell.workspace = true

# * Tools to aid concurrent programming * #
flume.workspace = true
oneshot.workspace = true

# * Adapters for web APIs * #
web-sys.workspace = true
wasm-bindgen-futures.workspace = true

# * Misc. * #
slab.workspace = true
