[package]
name = "luminol-components"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
luminol-audio.workspace = true
luminol-core.workspace = true
luminol-config.workspace = true
luminol-data.workspace = true
luminol-graphics.workspace = true
luminol-filesystem.workspace = true

egui.workspace = true
strum.workspace = true

luminol-egui-wgpu.workspace = true

wgpu.workspace = true
glam.workspace = true

syntect = { version = "5.1.0", default-features = false, features = [
    "default-fancy",
] }

itertools.workspace = true

color-eyre.workspace = true

qp-trie.workspace = true
indextree = "4.6.0"
lexical-sort = "0.3.1"

fragile.workspace = true
parking_lot.workspace = true
oneshot.workspace = true

fuzzy-matcher = "0.3.7"
murmur3.workspace = true

image.workspace = true
camino.workspace = true
