[package]
name = "luminol-config"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
egui.workspace = true
rust-ini.workspace = true
serde.workspace = true

strum.workspace = true
ron.workspace = true

once_cell.workspace = true

luminol-data.workspace = true
indexmap = "2.2.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alacritty_terminal.workspace = true
