[package]
name = "luminol-config"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# * Window management, graphical user interface and 3D rendering * #
egui.workspace = true

# * Data processing * #
serde.workspace = true
ron.workspace = true
rust-ini.workspace = true

# * Useful procedural macros * #
strum.workspace = true

# * More efficient implementations of individual components of Rust's Standard Library * #
once_cell.workspace = true

# * Luminol's crates * #
luminol-data.workspace = true

# * Misc. * #
indexmap = "2.2.6" # A hash table with consistent order and fast iteration

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# * Window management, graphical user interface and 3D rendering * #
alacritty_terminal.workspace = true
