[package]
name = "luminol-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
egui.workspace = true
egui_dock.workspace = true
egui-notify.workspace = true
egui-modal.workspace = true

poll-promise.workspace = true
once_cell.workspace = true

tracing.workspace = true
color-eyre.workspace = true

camino.workspace = true

itertools.workspace = true

strum.workspace = true
serde.workspace = true
serde_path_to_error = "0.1.0"
alox-48.workspace = true
serde_json = "1.0.120"
ron.workspace = true

rand.workspace = true

luminol-audio.workspace = true
luminol-config.workspace = true
luminol-data.workspace = true
luminol-filesystem.workspace = true
luminol-graphics.workspace = true
