[package]
name = "luminol-data"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
num_enum = "0.7.0"

rand.workspace = true

flate2 = "1.0"
base64 = "0.22.1"

serde.workspace = true
alox-48.workspace = true
bytemuck.workspace = true
strum.workspace = true
paste.workspace = true
camino.workspace = true
